# slci

./: README.md  flake.nix  slci.cabal
